--- a/templates/account.html
+++ b/templates/account.html
@@ -28,10 +28,20 @@
 				{% endfor %}
 			</table>
 			<h2>Add new table</h2>
-				<form class="form-inline" action="/account/createtable" method="POST">
-					<input type="text" name="tablenumber" placeholder="Table number or name" class="form-control">
-					<input type="submit" value="Create" class="btn btn-primary">
-				</form>
+	          <form class="form-inline" action="/account/createtable" method="POST">
+	              <div class="form-group">
+                	{% if createtableform.tablenumber.errors %} 
+                		<ul class="errors"> 
+               			{% for error in createtableform.tablenumber.errors %} 
+            	   			<li>{{error}}</li> 
+			   			{% endfor %} 
+					    </ul> 
+				    {% endif %}
+				    {{ createtableform.csrf_token}}
+				    {{ createtableform.tablenumber(class="form-control", placeholder="Table number or name")}}
+				    {{ createtableform.submit(value="Create", class="btn btn-primary") }}
+				   </div>
+			  </form>
 		</div>
 	</div>
 </div>
