--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,13 @@
 		<title>Waiter Caller</title>
 		<!-- Bootstrap core CSS -->
 		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+		<style type="text/css">
+		ul.errors {
+					list-style-type: none;
+					padding: 0;
+					color: red;
+		}
+		</style>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5
 	  elements and media queries -->
 		  <!--[if lt IE 9]>
@@ -18,7 +25,9 @@
 		  respond.min.js"></script>
 		  <![endif]-->
 	</head>
+	{% block bodytag %}
 	<body>
+	{% endblock %}
 		{% block navbar %}
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
