--- a/templates/account.html
+++ b/templates/account.html
@@ -17,12 +17,13 @@
 					<th>Delete</th>
 				</tr>
 				{% for table in tables %}
-					<form class="form-inline" action="/account/deletetable">
+					<form class="form-inline" action="/account/deletetable" method="POST">
 						<tr>
 							<td>{{table.number}}</td>
 							<td>{{table.url}}</td>
-							<td><input type="submit" value="Delete" class="form-control"></td>
-							<input type="text" name="tableid" value="{{table._id}}" hidden>
+				    		    {{ deletetableform.csrf_token }}
+							<td>{{ deletetableform.submit(value="Delete", class="btn btn-primary") }}</td>
+							{{ deletetableform.tablenumber(value=table._id) }} 
 						</tr>
 					</form>
 				{% endfor %}
@@ -37,7 +38,7 @@
 			   			{% endfor %} 
 					    </ul> 
 				    {% endif %}
-				    {{ createtableform.csrf_token}}
+				    {{ createtableform.csrf_token }}
 				    {{ createtableform.tablenumber(class="form-control", placeholder="Table number or name")}}
 				    {{ createtableform.submit(value="Create", class="btn btn-primary") }}
 				   </div>
