--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,
 		initial-scale=1">
-		<linl rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 		{% block metarefresh %} {% endblock %}
 		<title>Waiter Caller</title>
 		<!-- Bootstrap core CSS -->
